[package]
name = "monitor-control"
description = "The fastest way to get / set DDC values for a monitor"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
ddc = "*"
ddc-i2c = { version = "*", features = ["i2c-linux"] }
